--- a/components/CategoriesSection.module.css
+++ b/components/CategoriesSection.module.css
@@ -35,6 +35,14 @@
     overflow: hidden;
 }
 
+.cardImage {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .imagePlaceholder {
     width: 100%;
     height: 100%;
