--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -98,7 +98,7 @@
     display: inline-flex;
 }
 
-.desktopCta {
+.desktopSideCta {
     display: none;
     padding: 10px 18px;
     font-size: 0.84rem;
@@ -175,6 +175,28 @@
 }
 
 @media (min-width: 1025px) {
+    .inner {
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .rightSide {
+        grid-column: 1;
+        justify-self: start;
+    }
+
+    .leftSide {
+        grid-column: 2;
+        justify-self: center;
+    }
+
+    .logo {
+        grid-column: 3;
+        justify-self: end;
+    }
+
     .desktopNav {
         display: flex;
     }
@@ -183,7 +205,7 @@
         display: none;
     }
 
-    .desktopCta {
+    .desktopSideCta {
         display: inline-flex;
     }
 
